tests/Nonterminal.lean.expected
tests/Nonterminal.lean:19:2: warning: aesop: failed to prove the goal after exhaustive search.
tests/Nonterminal.lean:27:2: warning: aesop: failed to prove the goal after exhaustive search.
tests/Nonterminal.lean:26:21: error: unsolved goals
⊢ False
tests/Nonterminal.lean:29:21: error: unsolved goals
⊢ MyFalse
tests/Nonterminal.lean:32:21: error: unsolved goals
⊢ False
tests/Nonterminal.lean:41:2: warning: aesop: failed to prove the goal after exhaustive search.
tests/Nonterminal.lean:40:22: error: unsolved goals
case falso
⊢ False

case tt
⊢ MyTrue₁
